--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="container mt-3">
       <form class="js-form">
-         <select class="form-select mx-auto my-5 w-50 js-select">
+         <select class="form-select bg-info p-4 mx-auto my-5 w-50 js-select">
             <option value="All">All</option>
          </select>
       </form>
